PATCH 0.0.1
Added core JavaFX dependencies to pom file.
Added JavaFX maven plugin to compile/run and eventually package the application.
Created the program entry Application file, currently empty.